--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -18,6 +18,11 @@
       year: 2022 - 2025
       description:
       - Elizabeth Creak Fellow
+      - Methodology to capture video footage – can be used for researchers and developers to validate their data and presents an easy and affordable video recording system that is fully adaptable
+      - The development of an automated system for monitoring feeding behaviour at a feed trough and its importance as a welfare assessment tool
+      - Optimising foraging theory, does it apply to housed Bos taurus fed a total mixed ration
+      - The development of a feeding behaviour ethogram for practical use Or The detection of feeding behaviours in cattle implementation of current and future feeding ethograms
+
     - title: MSc in Data Science
       institution: Harper Adams University, United Kingdom
       year: 2020 - 2021
