--- a/_config.yml
+++ b/_config.yml
@@ -68,14 +68,14 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: georginaanna
 gitlab_username: # your GitLab user name
-twitter_username: # your Twitter handle
+twitter_username: wager_georgina
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: georgina-wager-56192a153
 telegram_username: # your Telegram user name
 scholar_userid: # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
-orcid_id: # your ORCID ID
+orcid_id: https://orcid.org/0000-0001-8669-7109
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
