--- a/_config.yml
+++ b/_config.yml
@@ -213,6 +213,7 @@ keep_files:
 # Plug-ins
 plugins:
   - jekyll-archives
+  - jekyll-google-scholar
   - jekyll-diagrams
   - jekyll-email-protect
   - jekyll-feed
