--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,10 +4,6 @@ on:
     - cron: "0 0 1 * *"
   workflow_dispatch:
 
-permissions:
-  contents: write
-  pull-requests: write
-  
 jobs:
   repo-sync:
     runs-on: ubuntu-latest
@@ -18,6 +14,7 @@ jobs:
       - name: actions-template-sync
         uses: AndreasAugustin/actions-template-sync@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          # Use PAT instead of GITHUB_TOKEN
+          github_token: ${{ secrets.PAT_SYNC }}
           source_repo_path: alshedivat/al-folio
           upstream_branch: master
