--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,21 +8,22 @@ jobs:
   repo-sync:
     runs-on: ubuntu-latest
 
-    # This removes or reduces default token's permissions, so there's no conflict
-    permissions:
-      contents: none
-
+    # Remove all default token permissions so that GitHub won't provide GITHUB_TOKEN at all.
+    # This ensures that the only token we have is your PAT.
+    permissions: {}
+    
     steps:
-      - name: Checkout
+      - name: Check out the repo
         uses: actions/checkout@v4
+
+      - name: Use your PAT
+        # Make sure the *environment variable* GITHUB_TOKEN is your PAT
+        run: echo "GITHUB_TOKEN=${{ secrets.PAT_SYNC }}" >> $GITHUB_ENV
 
       - name: actions-template-sync
         uses: AndreasAugustin/actions-template-sync@v1
-        env:
-          # Force the environment variable GITHUB_TOKEN to be your PAT
-          GITHUB_TOKEN: ${{ secrets.PAT_SYNC }}
         with:
-          # Also set the "github_token" input (some actions do use it directly)
+          # Also set the "github_token" input
           github_token: ${{ secrets.PAT_SYNC }}
           source_repo_path: alshedivat/al-folio
           upstream_branch: master
